stateless functions, parent child practice

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 } */
+
+.nav-bar{
+  width: 100%;
+  background-color: black;
+  color: white;
+
+}
+.footer{
+  width: 100%;
+  background-color: black;
+  color: white;
+
+}
